Fix broken URLs with spaces for screenshots and browser-opens